--- a/src/Sass/subComponentStyles/connectionComponent.scss
+++ b/src/Sass/subComponentStyles/connectionComponent.scss
@@ -16,12 +16,14 @@ $linkedInColor2: #0072b1;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  flex-wrap: wrap;
   .connectionContainer {
     width: 550px;
 
     padding: 10px;
     background-color: white;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
   }}
@@ -67,4 +69,17 @@ margin: 3px 0px -2px;
     background-color: rgb(230, 230, 230);
   }
 
+}
+
+
+@media (max-width:580px) {
+  .connectionComponent{
+    .connectionContainer{
+      width: 90%;
+    }
+  }
+
+  .connectionCard{
+width: 150px;
+  }
 }
