--- a/src/Sass/subComponentStyles/topBar.scss
+++ b/src/Sass/subComponentStyles/topBar.scss
@@ -63,6 +63,12 @@ color: rgb(122, 122, 122);
       color: rgb(108, 108, 108);
       cursor: pointer;
     }
+    .navProfile{
+      width: 30px;
+      height: 30px;
+      cursor: pointer;
+border-radius: 100%;
+    }
     .navIcons:hover {
       color: black;
     }
@@ -71,7 +77,7 @@ color: rgb(122, 122, 122);
 width:120px;
 position: absolute;
 top: 62px;
-right: 120px;
+right: 2.9%;
 text-align: center;
 
 button{
@@ -137,14 +143,18 @@ cursor: pointer;
 
 .topBarComponent{
   width: 100%;
-
   .topBarContainer1{
 width: 55%;
 margin-right: 10px;
   }
   .topBarContainer2{
 width: 45%;
-  }
+
+.logoutContainer{
+  right: 3%;
+}
+
+}
 }
 
 }
@@ -152,6 +162,10 @@ width: 45%;
 
 @media (max-width : 580px){
 .topBarComponent{
+  // flex-direction: column; 
+
+justify-content: center;
+align-items: center;
   .topBarContainer1{
     width: 100%;
     .searchBar{
@@ -163,7 +177,24 @@ width: 45%;
   }
   // }
   .topBarContainer2{
-    display: none;
+// display: none;
+justify-content: end;
+// background-color: white;
+width: 15%;
+align-items: center;
+// padding: 15px;
+bottom: 0px;
+.navIcons{
+  display: none;
+}
+.navProfile{
+  width: 40px;
+  height: 40px;
+  border: 1px solid rgb(178, 178, 178);
+}
+.logoutContainer{
+  right: 2.9%;
+}
   }
 }
 
@@ -174,3 +205,5 @@ margin: 0px 10px !important;
 }
 
 }
+
+
