--- a/src/Sass/subComponentStyles/connectionComponent.scss
+++ b/src/Sass/subComponentStyles/connectionComponent.scss
@@ -74,12 +74,43 @@ margin: 3px 0px -2px;
 
 @media (max-width:580px) {
   .connectionComponent{
+
     .connectionContainer{
       width: 90%;
     }
+
+    .topBarContainer2{
+      position: absolute;
+      width: 100%;
+      background-color: white;
+      padding: 16px;
+      bottom: 0px;
+    
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      position: fixed;
+    border: 3px solid rgb(213, 213, 213);
+      .navIcons{
+        font-size: 1.5em;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+        Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+        sans-serif;
+      color: rgb(108, 108, 108);
+      cursor: pointer;
+      }
+      .navIcons:hover {
+        color: black;
+      }
+        }
+    
+    
+      
   }
 
   .connectionCard{
 width: 150px;
   }
 }
+
+
